--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </nav>
 
-    <h1 class="text-center whi">Welcome bro! This is my FUCKING Space!</h1>
+    <h1 class="text-center whi">Welcome bro! This is my FUCKING Space!</h1><br><br>
     <div class="text-center">
         <figcaption class="blockquote-footer">
             Enjoy of your <cite title="fspc">Free Space</cite> man...
