--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </div>
   </nav>
 
-    <h1 class="text-center whi">Welcome bro! This is my FUCKING Space!</h1><br><br>
+    <h1 class="text-center whi">Welcome bro! This is my FUCKING Space!</h1><br>
     <div class="text-center">
         <figcaption class="blockquote-footer">
-            Enjoy of your <cite title="fspc">Free Space</cite> man...
+            Feel free to pick <cite title="fspc">Anything</cite> ...
           </figcaption>
     </div>
 
