--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h1 class="text-center whi">Welcome bro! This is my FUCKING Space!</h1><br>
     <div class="text-center">
         <figcaption class="blockquote-footer">
-            Feel free to pick <cite title="fspc">Anything</cite> ...
+            Feel free to pick <cite title="fspc">Anything</cite> you want ...
           </figcaption>
     </div>
 
